--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>handsomecx</title>
+<style type="text/css">
+body,td,th {
+	color: #309;
+}
+body {
+	background-color: #3F0;
+}
+</style>
+</head>
 
+<body>
+<p>帅气的曹鑫 </p>
+<p> handsomecx </p>
+</body>
+</html>
