--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
     <div class="container">
       <section id="main_content">
         <h3>
-<a id="welcome-to-HsinTsao-pages" class="anchor" href="#welcome-to-HsinTsao-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="welcome-to-HsinTsao-pages" class="anchor" href="#welcome-to-HsinTsao-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>welcome to HsinTsao pages.</h3>
 
 <p>帅气的曹鑫</p>
 
 <h3>
-<a id="The-aims" class="anchor" href="#The-aims" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a id="The-aims" class="anchor" href="#The-aims" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>The Aims</h3>
 
 <p>I just want you see the above characters.There is nothing following.If you want, I will add. </p>
 
